<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_action_login"
        android:showAsAction="ifRoom"
        android:title="@string/account" />

    <item
        android:id="@+id/newnote"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/titleNew" />

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh" />

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search" />

    <group
        android:id="@+id/sort"
        android:actionViewClass="android.widget.CheckBox"
        android:checkableBehavior="single"
        android:enabled="true"
        android:icon="@drawable/ic_action_sort"
        android:menuCategory="system"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/sort"
        android:visible="true">
        <item
            android:id="@+id/sort_date"
            android:checked="true"
            android:enabled="true"
            android:icon="@drawable/ic_action_sort_date"
            android:title="@string/sort_date"
            android:visible="true" />

        <item
            android:id="@+id/sort_title"
            android:checked="false"
            android:enabled="true"
            android:icon="@drawable/ic_action_sort_title"
            android:title="@string/sort_title"
            android:visible="true" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_action_about"
            android:showAsAction="ifRoom"
            android:title="@string/about" />
    </group>

</menu>
