<?xml version="1.0" encoding="utf-8"?>

<!-- This is the layout where you edit the text of a note. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/action_undo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/undo"
                    android:src="@drawable/undo" />

                <ImageButton
                    android:id="@+id/action_redo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/redo"
                    android:src="@drawable/redo" />

                <Spinner
                    android:id="@+id/action_format"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:contentDescription="@string/format"
                    android:title="@string/format" />

                <Spinner
                    android:id="@+id/action_insert"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:contentDescription="@string/insert"
                    android:title="@string/insert" />

                <Spinner
                    android:id="@+id/action_heading"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:contentDescription="@string/heading"
                    android:title="@string/heading" />

                <Spinner
                    android:id="@+id/action_txt_color"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:contentDescription="@string/txt_color"
                    android:title="@string/txt_color" />

                <Spinner
                    android:id="@+id/action_bg_color"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:contentDescription="@string/bg_color"
                    android:title="@string/bg_color" />

                <Spinner
                    android:id="@+id/action_alignment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:contentDescription="@string/alignment"
                    android:title="@string/alignment" />

            </LinearLayout>
        </HorizontalScrollView>


        <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/bodyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
