<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/StatusBgColor"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center|center_horizontal"
        android:maxLines="1"
        android:text="@string/welcome"
        android:textColor="@color/StatusTxtColor" />

    <TextView
        android:id="@+id/accountlabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/AccountBgColor"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/select_account"
        android:textColor="@color/AccountTxtColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/AccountBgColor"
        android:textColor="@color/AccountTxtColor">

        <Spinner
            android:id="@+id/accountSpinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/editAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/editAccount"
            android:background="@drawable/ic_action_user_edit" />

    </LinearLayout>

    <ListView
        android:id="@+id/notesList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
